Added the authentication and login modules and service

--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://conduit:conduit@localhost:5432/conduit?schema=public"
+jwt_secret=itsVeryStrong
