--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env PORT=3000 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env PORT=3000 next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,15 +17,22 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "formik": "^2.2.9",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "sass": "^1.57.1"
   }
 }
