--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.11.3",
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.1",
+    "@tanstack/react-query": "^4.22.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -32,6 +33,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.22.0",
     "cross-env": "^7.0.3",
     "sass": "^1.57.1"
   }
