--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -27,6 +27,7 @@
   "include": [
     "next-env.d.ts",
     "custom.d.ts",
+    "next.config.js",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
